--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         setLoading(true);
 
         try {
-          const response = await fetch('https://your-render-service.onrender.com/api/chat', {
+          const response = await fetch('https://chat-with-pdf-koer.onrender.com/api/chat', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ pdfText, userInput }),
