--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
           text += content.items.map(item => item.str).join(' ') + '\n';
         }
 
-        if (text.length > 500) {
-          alert('PDF text is too large. Only the first 500 characters will be used.');
-          text = text.slice(0, 500);
-        }
         setPdfText(text);
         setMessages([{ sender: 'system', text: 'PDF uploaded successfully. You can now ask questions about the content.' }]);
       };
@@ -55,7 +51,7 @@
         setLoading(true);
 
         try {
-          const response = await fetch('https://chat-with-pdf-koer.onrender.com/api/chat', {
+          const response = await fetch('https://your-render-service.onrender.com/api/chat', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ pdfText, userInput }),
